Fix update to accessibility

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +11,7 @@
   </head>
   <body id="gallery">
     <div class="content">
-      <div class="header flex">
+      <header class="header flex">
         <i class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
@@ -26,7 +26,7 @@
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
-      </div>
+      </header>
       <h4>CHECK OUT OUR CAKES!</h4>
       <div class="gallery-wrapper">
         <div class="gallery-item">
