--- a/public/landing.html
+++ b/public/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +11,7 @@
   </head>
   <body id="landing">
     <div class="content">
-      <div class="header flex">
+      <header class="header flex">
         <i class="hamburger fas fa-bars"></i>
         <div class="menu">
           <div class="links">
@@ -20,19 +20,19 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
-          <img class="cake-review" src="../images/cake_review.png">
+          <img alt= "Beautiful and delicious cakes! Quote by: a satisfied customer" class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>     
+        <i class="close fas fa-times"></i>
         <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+          <h2 class="logo"><img alt="Custom Cakery" src="../images/cake_logo.png"></h2>
         </a>
-      </div>
+      </header>
       <div class="flex">
         <div>
-          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
-          <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png"></div>
+          <img alt="Image of a cake, click me to see view cakes" class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
+          <div class="margin-top--small medium-image-text"><img alt="click the cake above to see more of our delicious cakes" src="../images/cake_text.png"></div>
         </div>
-        <div class="description-text">
+        <article class="description-text">
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
           <p>
             Welcome to The Custom Cakery! We are an entirely custom cake making business, and would love to take on any cake challenge! Our cakes are inspired by many things, including: fresh flowers, winter mountain scenes, a long walk on the beach, spending time with our friends and family, modern art galleries, heavy metal concerts, scuba diving in the carribbean, the smell of rain, our favorite novels, and of course YOU! We would love to create that custom cake of your dreams, just for fun, or for a special event and / or person in your life! These events may include: birthdays, weddings, funerals, get togethers, reunions, band practice, halloween, national chocolate cake day, births, your cat's birthday, quitting a job, apologizing to a friend or acquaintance and more!!!!!
@@ -40,7 +40,7 @@
           <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-        </div>       
+        </article>
       </div>
     </div>
     <div class="footer">
