Fix styles to improve accessibility

--- a/public/order.html
+++ b/public/order.html
@@ -64,25 +64,25 @@
         <div>If you selected "writing," please indicate text here: </div>
         <input type="text" placeholder="cake text">
         <div>Flavor(s)</div>
-        <input type="checkbox" checked value="chocolate">Chocolate
-        <input type="checkbox" checked value="vanilla">Vanilla
-        <input type="checkbox" checked value="fruit">Fruit
-        <input type="checkbox" checked value="other">Other
+        <input type="checkbox" value="chocolate">Chocolate
+        <input type="checkbox" value="vanilla">Vanilla
+        <input type="checkbox" value="fruit">Fruit
+        <input type="checkbox" value="other">Other
         <div>Filling(s)</div>
-        <input type="checkbox" checked value="vanilla">Vanilla
-        <input type="checkbox" checked value="chocolate">Chocolate
-        <input type="checkbox" checked value="fruit">Fruit
-        <input type="checkbox" checked value="other">Other
+        <input type="checkbox" value="vanilla">Vanilla
+        <input type="checkbox" value="chocolate">Chocolate
+        <input type="checkbox" value="fruit">Fruit
+        <input type="checkbox" value="other">Other
         <div>Frosting(s)</div>
-        <input type="checkbox" checked value="fruit">Fruit
-        <input type="checkbox" checked value="chocolate">Chocolate
-        <input type="checkbox" checked value="vanilla">Vanilla
-        <input type="checkbox" checked value="other">Other
+        <input type="checkbox" value="fruit">Fruit
+        <input type="checkbox" value="chocolate">Chocolate
+        <input type="checkbox" value="vanilla">Vanilla
+        <input type="checkbox" value="other">Other
         <div>Topping(s)</div>
-        <input type="checkbox" checked value="chocolate">Chocolate Shavings
-        <input type="checkbox" checked value="vanilla">Sprinkles
-        <input type="checkbox" checked value="fruit">Fruit
-        <input type="checkbox" checked value="other">Other
+        <input type="checkbox" value="chocolate">Chocolate Shavings
+        <input type="checkbox" value="vanilla">Sprinkles
+        <input type="checkbox" value="fruit">Fruit
+        <input type="checkbox" value="other">Other
         <div>Approx. How Many People Should Cake Feed?</div>
         <select name="" id="">
           <option value="1-10">1 - 10</option>
