--- a/public/landing.html
+++ b/public/landing.html
@@ -29,27 +29,27 @@
       </header>
       <div class="flex">
         <div>
-          <img alt="Image of a cake, click me to see view cakes" class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
-          <div class="margin-top--small medium-image-text"><img alt="click the cake above to see more of our delicious cakes" src="../images/cake_text.png"></div>
+          <a href="./gallery.html"><img alt="Image of a cake, click me to see view cakes" class="medium-image landing-image" src="../images/sprinkle_cake.jpeg"></a>
+          <div class="margin-top--small medium-image-text"><img alt="" src="../images/cake_text.png"></div>
         </div>
         <article class="description-text">
-          <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
+          <div aria-hidden="true">🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
           <p>
             Welcome to The Custom Cakery! We are an entirely custom cake making business, and would love to take on any cake challenge! Our cakes are inspired by many things, including: fresh flowers, winter mountain scenes, a long walk on the beach, spending time with our friends and family, modern art galleries, heavy metal concerts, scuba diving in the carribbean, the smell of rain, our favorite novels, and of course YOU! We would love to create that custom cake of your dreams, just for fun, or for a special event and / or person in your life! These events may include: birthdays, weddings, funerals, get togethers, reunions, band practice, halloween, national chocolate cake day, births, your cat's birthday, quitting a job, apologizing to a friend or acquaintance and more!!!!!
           </p>
-          <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
+          <div>Click <a aria-label="click here to order a cake" href="order.html">here</a> to order a cake today, or check out our awesome <a aria-label="click here view our gallery" href="gallery.html">gallery!</a></div>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
-          <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
+          <div aria-hidden="true">🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
         </article>
       </div>
     </div>
     <div class="footer">
       <div>Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
       <div>
-        <a name="instagram" href=""><i class="fab fa-instagram"></i></a>
-        <a name="facebook" href=""><i class="fab fa-facebook-square"></i></a>
-        <a name="email" href=""><i class="fas fa-envelope-open"></i></a>
-        <a name="twitter" href=""><i class="fab fa-twitter"></i></a>
+        <a aria-label="instagram" href=""><i class="fab fa-instagram"></i></a>
+        <a aria-label="facebook" href=""><i class="fab fa-facebook-square"></i></a>
+        <a aria-label="email" href=""><i class="fas fa-envelope-open"></i></a>
+        <a aria-label="twitter" href=""><i class="fab fa-twitter"></i></a>
       </div>
     </div>
     <script type="text/javascript" src="../main.js"></script>
