--- a/public/gallery.html
+++ b/public/gallery.html
@@ -12,7 +12,7 @@
   <body id="gallery">
     <div class="content">
       <header class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <button class="hamburger fas fa-bars"></button>
         <div class="menu">
           <div class="links">
             <h5>MENU</h5>
@@ -20,9 +20,9 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
+          <button class="close fas fa-times"></button>
           <img class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
@@ -83,10 +83,10 @@
     <div class="footer">
       <div>Contact Us</div>
       <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
+        <a aria-label="instagram" href=""><i class="fab fa-instagram"></i></a>
+        <a aria-label="facebook" href=""><i class="fab fa-facebook-square"></i></a>
+        <a aria-label="email" href=""><i class="fas fa-envelope-open"></i></a>
+        <a aria-label="twitter" href=""><i class="fab fa-twitter"></i></a>
       </div>
     </div>
     <script type="text/javascript" src="../main.js"></script>
