--- a/public/landing.html
+++ b/public/landing.html
@@ -12,7 +12,7 @@
   <body id="landing">
     <div class="content">
       <header class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <button class="hamburger fas fa-bars"></button>
         <div class="menu">
           <div class="links">
             <h5>MENU</h5>
@@ -20,9 +20,9 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
+          <button class="close fas fa-times"></button>
           <img alt= "Beautiful and delicious cakes! Quote by: a satisfied customer" class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img alt="Custom Cakery" src="../images/cake_logo.png"></h2>
         </a>
