--- a/public/order.html
+++ b/public/order.html
@@ -11,7 +11,7 @@
   </head>
   <body id ="order">
     <div class="modal">
-      <i class="modal-close fas fa-times"></i>
+      <button class="modal-close fas fa-times"></button>
       <div class="modal-content">
        <h3>Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</h3>
         <div class="input">
@@ -24,7 +24,7 @@
     </div>
     <div class="content order">
       <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
+        <button class="hamburger fas fa-bars"></button>
         <div class="menu">
           <div class="links">
             <h5>MENU</h5>
@@ -32,9 +32,9 @@
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
           </div>
+          <button class="close fas fa-times"></button>
           <img class="cake-review" src="../images/cake_review.png">
         </div>
-        <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
@@ -84,7 +84,7 @@
         <input type="checkbox" value="fruit">Fruit
         <input type="checkbox" value="other">Other
         <div>Approx. How Many People Should Cake Feed?</div>
-        <select name="" id="">
+        <select name="select" id="select">
           <option value="1-10">1 - 10</option>
           <option value="10-20">10 - 20</option>
           <option value="10-20">20 - 30</option>
@@ -93,7 +93,7 @@
           <option value="50+">50+</option>
         </select>
         <div>
-          <textarea name="" id="" cols="30" rows="10">Please Provide Details if Selected "Other" Anywhere on Form</textarea>
+          <textarea name="textarea" id="textarea" cols="30" rows="10">Please Provide Details if Selected "Other" Anywhere on Form</textarea>
         </div>
         <div>Desired Pickup Date <br>(*note this is desired only and is not a confirmation, we will email you with details or
           contact you if more information is required regarding your cake.</div>
@@ -107,10 +107,10 @@
     <div class="footer">
       <div>Contact Us</div>
       <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
+        <a aria-label="instagram" href=""><i class="fab fa-instagram"></i></a>
+        <a aria-label="facebook" href=""><i class="fab fa-facebook-square"></i></a>
+        <a aria-label="email" href=""><i class="fas fa-envelope-open"></i></a>
+        <a aria-label="twitter" href=""><i class="fab fa-twitter"></i></a>
       </div>
     </div>
   <script type="text/javascript" src="../main.js"></script>
